Added meta properties to <head>

--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 
     <meta property="og:title" content="Aaron Hurtado's Website">
     <meta property="og:description" content="Aaron Hurtado's personal website showcasing software engineering portfolio, resume, experience, and projects">
+    <meta property="og:image" content="https://www.aaronhurtado.com/images/grad_pic.jpg">
     <meta property="og:url" content="https://www.aaronhurtado.com/">
+    <meta property="og:type" content="website">
+
+    <link rel="canonical" href="https://www.aaronhurtado.com/">
 
     <meta name="theme-color" media="(prefers-color-scheme: dark)" content="rgb(35, 39, 47)">
 
@@ -21,6 +25,25 @@
 
     <link rel="icon" type="image/png" href="./images/favicon1.png">
     <link rel="stylesheet" href="./style.css">
+
+    <script type="application/ld+json">
+        {
+          "@context": "https://schema.org",
+          "@type": "Person",
+          "name": "Aaron Hurtado",
+          "jobTitle": "Software Engineer",
+          "url": "https://www.aaronhurtado.com",
+          "sameAs": [
+            "https://www.linkedin.com/in/aaronhurtado/",
+            "https://github.com/aahurtado"
+          ],
+          "alumniOf": {
+            "@type": "EducationalOrganization",
+            "name": "University of California, San Diego"
+          },
+          "description": "Aaron Hurtado is a Software Engineer with multiple years of experience."
+        }
+    </script>
 </head>
 
 <body>
@@ -89,7 +112,7 @@
                 </p>
 
                 <p>
-                   I am a Software Engineer with over 5 years of experience in building and optimizing large-scale systems, including a healthcare analytics engine serving 10 million daily users and a U.S. Navy combat defense system. I am an expert in multiple programming languages, including C++, Python, Java, and cloud technologies like AWS, with a track record of automating processes and enhancing system performance. I am passionate about tackling complex challenges, demonstrated through personal projects such as my cryptocurrency trading bot (which you can read more about in the Projects section of this website). I am eager to apply my technical expertise and problem-solving skills to deliver impactful solutions to meaningful future projects.
+                   I am a Software Engineer with over 5 years of experience in building and optimizing large-scale systems, including a healthcare analytics engine serving 10 million daily users and a U.S. Navy combat defense system. I am an expert in multiple programming languages, including C++, Python, Java, and cloud technologies like AWS, with a track record of automating processes and enhancing system performance. I am passionate about tackling complex challenges, demonstrated through personal projects such as my cryptocurrency trading bot (which you can read more about in the <a href="#projects">Projects</a> section of this website). I am eager to apply my technical expertise and problem-solving skills to deliver impactful solutions to meaningful future projects.
                 </p>
 
 
@@ -218,7 +241,7 @@
                         During my time at UCSD, I learned everything from object-oriented programming and software design patterns to data structures and algorithms. I did the majority of my class work in Java, C++, and Python which are my main languages. During my time as a student I also worked as a tutor for the UCSD CSE department for several quarters. I tutored both lower and upper division data structure courses.
                     </p>
                     <p>
-                        A huge part of my time at UCSD was being accepted into the Early Research Scholars Program (ERSP) by the CSE department. I applied to the program the first year it was created and was one of 23 undergraduate students accepted into the program. The main purpose of the program was to expose and get undergraduate students involved in Computer Science Research which is typically done by graduate students and professors. As a result of the ERSP program, I spent three years working alongside graduate students and professors on their research projects in the <a href="https://www.sysnet.ucsd.edu/sysnet/" target="_blank">Systems and Networking Research Group</a> as well as the <a href="https://cryptosec.ucsd.edu/" target="_blank">Security and Cryptography Research Group</a>. The professors I worked with, who were the heads of the aforementioned research groups, were <a href="https://cseweb.ucsd.edu/~savage/" target="_blank">Stefan Savage</a> and <a href="https://cseweb.ucsd.edu/~voelker/" target="_blank">Geoffrey Voelker</a>. You can read about the projects I worked on while in this program in the "Projects" section of this website. You can also learn more about the ERSP program <a href="https://ersp.ucsd.edu/" target="_blank">here</a>.
+                        A huge part of my time at UCSD was being accepted into the Early Research Scholars Program (ERSP) by the CSE department. I applied to the program the first year it was created and was one of 23 undergraduate students accepted into the program. The main purpose of the program was to expose and get undergraduate students involved in Computer Science Research which is typically done by graduate students and professors. As a result of the ERSP program, I spent three years working alongside graduate students and professors on their research projects in the <a href="https://www.sysnet.ucsd.edu/sysnet/" target="_blank">Systems and Networking Research Group</a> as well as the <a href="https://cryptosec.ucsd.edu/" target="_blank">Security and Cryptography Research Group</a>. The professors I worked with, who were the heads of the aforementioned research groups, were <a href="https://cseweb.ucsd.edu/~savage/" target="_blank">Stefan Savage</a> and <a href="https://cseweb.ucsd.edu/~voelker/" target="_blank">Geoffrey Voelker</a>. You can read about the projects I worked on while in this program in the <a href="#projects">Projects</a> section of this website. You can also learn more about the ERSP program <a href="https://ersp.ucsd.edu/" target="_blank">here</a>.
                     </p>
                 </div>
 
@@ -1080,7 +1103,7 @@
 
                 <div class="image-container">
                     <a href="https://drive.google.com/file/d/1PrqYG2gqoPiIip0i75nTQxt5qtgbkJRy/view" target="_blank">
-                        <img src="./images/sec_group.png" alt="Network Traffic Analysis">
+                        <img src="./images/sec_group.png" alt="Network Traffic Analysis ft. Aaron Hurtado">
                     </a>
                 </div>
                 
