--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@
 
                 <div class="image-container" id="UCSD-pics">
                     <a href="https://www.ucsd.edu/" target="_blank">
-                        <img src="./images/ucsd_seal.png" alt="UCSD Seal">
+                        <img src="./images/ucsd_seal.png" alt="UCSD Seal" loading="lazy">
                     </a>
-                    <img src="./images/ucsd_lib.jpg" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image">
+                    <img src="./images/ucsd_lib.jpg" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
                 </div>
 
                 <div class="text-container medium-gap">
@@ -251,7 +251,7 @@
 
                 <div class="image-container">
                     <a href="https://cse.ucsd.edu/" target="_blank">
-                        <img src="./images/ucsd_cse.jpg" alt="UCSD CSE Department">
+                        <img src="./images/ucsd_cse.jpg" alt="UCSD CSE Department" loading="lazy">
                     </a>
                 </div>
             </div>
@@ -326,7 +326,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/hedis_measures.PNG" alt="HEDIS Measure Descriptions" onclick="openFullscreen(this)" class="clickable-image">
+                        <img src="./images/hedis_measures.PNG" alt="HEDIS Measure Descriptions" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
                         <figcaption>Brief HEDIS measure descriptions</figcaption>
                     </figure>
                 </div>
@@ -378,11 +378,11 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/centene_location.avif" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image">
+                        <img src="./images/centene_location.avif" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
                         <figcaption>San Diego Office</figcaption>
                     </figure>
                     <a href="https://www.centene.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/centene_logo.png" alt="Centene Logo" id="centene_logo">
+                        <img src="./images/centene_logo.png" alt="Centene Logo" id="centene_logo" loading="lazy">
                     </a>
                 </div>
 
@@ -431,22 +431,22 @@
 
                 <div class="image-container">
                     <a href="https://www.epsilonsystems.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/epsilon_logo.jfif" alt="Epsilon Systems Solutions Logo">
+                        <img src="./images/epsilon_logo.jfif" alt="Epsilon Systems Solutions Logo" loading="lazy">
                     </a>
                     <a href="https://www.rtx.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/raytheon.jfif" alt="Raytheon Logo">
+                        <img src="./images/raytheon.jfif" alt="Raytheon Logo" loading="lazy">
                     </a>
                 </div>
 
                 <div class="image-container">
                     <a href="https://en.wikipedia.org/wiki/Ship_Self-Defense_System" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/navy_ship.jpg" alt="Navy Ship">
+                        <img src="./images/navy_ship.jpg" alt="Navy Ship" loading="lazy">
                     </a>
                 </div>
 
                 <div class="video-container">
                     <!-- <iframe src="https://www.youtube.com/embed/XrNSXqaZtC0?autoplay=1&mute=1&controls=1&loop=1&playlist=XrNSXqaZtC0"></iframe> -->
-                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/XrNSXqaZtC0?si=HSENmCpgKOFFwTUh&autoplay=1&mute=1&controls=1&loop=1&playlist=XrNSXqaZtC0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/XrNSXqaZtC0?si=HSENmCpgKOFFwTUh&autoplay=1&mute=1&controls=1&loop=1&playlist=XrNSXqaZtC0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" loading="lazy" allowfullscreen></iframe>
                 </div>
 
             </div>
@@ -487,7 +487,7 @@
                 </p>
 
                 <div class="image-container">
-                    <img src="./images/stock_chart.webp" alt="Stock Chart" onclick="openFullscreen(this)" class="clickable-image">
+                    <img src="./images/stock_chart.webp" alt="Stock Chart" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
                 </div>
 
                 <h5>What is <a href="https://www.investopedia.com/terms/t/technicalanalysis.asp" target="_blank" rel="noopener noreferrer">Technical Analysis</a>?</h5>
@@ -507,7 +507,7 @@
 
                 <div class="image-container">
                     <a href="https://www.investopedia.com/terms/m/macd.asp" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/macd.webp" alt="MACD">
+                        <img src="./images/macd.webp" alt="MACD" loading="lazy">
                     </a>
                 </div>
                 
@@ -518,7 +518,7 @@
                 </p>
 
                 <div class="image-container">
-                    <img src="./images/crypto.jpg" alt="Cryptocurrency" onclick="openFullscreen(this)" class="clickable-image">
+                    <img src="./images/crypto.jpg" alt="Cryptocurrency" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
                 </div>
 
                 <h5>Freqtrade</h5>
@@ -528,7 +528,7 @@
 
                 <div class="image-container">
                     <a href="https://github.com/freqtrade/freqtrade" target="_blank">
-                        <img src="./images/freqtrade.svg" alt="Freqtrade Logo" id="freqtrade_logo">
+                        <img src="./images/freqtrade.svg" alt="Freqtrade Logo" id="freqtrade_logo" loading="lazy">
                     </a>
                 </div> 
 
@@ -538,7 +538,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/code_freqtrade_strategy.png" alt="Example Freqtrade Strategy" onclick="openFullscreen(this)" class="clickable-image">
+                        <img src="./images/code_freqtrade_strategy.png" alt="Example Freqtrade Strategy" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
                         <figcaption>A Minimal Freqtrade Strategy</figcaption>
                     </figure>
                 </div> 
@@ -610,7 +610,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/freqtrade_results.PNG" alt="Freqtrade Results" onclick="openFullscreen(this)" class="clickable-image">
+                        <img src="./images/freqtrade_results.PNG" alt="Freqtrade Results" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
                         <figcaption>My Freqtrade Results</figcaption>
                     </figure>
                 </div>
@@ -670,7 +670,7 @@
 
 
                 <div class="image-container">
-                    <img src="./images/bitcoin.webp" alt="Bitcoin Logo" onclick="openFullscreen(this)" class="clickable-image">
+                    <img src="./images/bitcoin.webp" alt="Bitcoin Logo" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
                 </div>
 
 
@@ -737,7 +737,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/ps5_scalpers.webp" alt="PS5 listings on eBay" onclick="openFullscreen(this)" class="clickable-image">
+                        <img src="./images/ps5_scalpers.webp" alt="PS5 listings on eBay" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
                         <figcaption>PS5 listings on eBay by scalpers</figcaption>
                     </figure>
                 </div>
@@ -758,7 +758,7 @@
                 <div class="image-container">
                     <figure>
                         <a href="https://github.com/Strip3s/PhoenixBot" target="_blank">
-                            <img src="./images/phoenix_bot.png" alt="Phoenix Bot">
+                            <img src="./images/phoenix_bot.png" alt="Phoenix Bot" loading="lazy">
                         </a>
                         <figcaption>Phoenix Bot UI</figcaption>
                     </figure>
@@ -775,7 +775,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/ps5_product_page.png" alt="PS5 Product Page" onclick="openFullscreen(this)" class="clickable-image">
+                        <img src="./images/ps5_product_page.png" alt="PS5 Product Page" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
                         <figcaption>PS5 Product Page</figcaption>
                     </figure>
                 </div>
@@ -825,7 +825,7 @@
 
                 <div class="tilt-card-container">
                     <div class="tilt-card image-container">
-                        <img src="./images/ps5.png" alt="Playstation 5">
+                        <img src="./images/ps5.png" alt="Playstation 5" loading="lazy">
                     </div>
                 </div>
 
@@ -888,7 +888,7 @@
                 <div class="tilt-card-container">
                     <div class="tilt-card image-container">
                         <a href="https://github.com/aahurtado/my_website" target="_blank">
-                            <img src="./images/my_website_github.png" alt="Picture of this website">
+                            <img src="./images/my_website_github.png" alt="Picture of this website" loading="lazy">
                         </a>
                     </div>
                 </div>
@@ -960,7 +960,7 @@
 
                 <div class="image-container">
                     <a href="https://www.sysnet.ucsd.edu/projects/cloaking/searchseizure-IMC14v2.pdf" target="_blank">
-                        <img src="./images/research_paper_1.PNG" alt="Search + Seizure: The Effectiveness of Interventions on SEO Campaigns" class="text-width">
+                        <img src="./images/research_paper_1.PNG" alt="Search + Seizure: The Effectiveness of Interventions on SEO Campaigns" class="text-width" loading="lazy">
                     </a>
                 </div> 
 
@@ -1103,7 +1103,7 @@
 
                 <div class="image-container">
                     <a href="https://drive.google.com/file/d/1PrqYG2gqoPiIip0i75nTQxt5qtgbkJRy/view" target="_blank">
-                        <img src="./images/sec_group.png" alt="Network Traffic Analysis ft. Aaron Hurtado">
+                        <img src="./images/sec_group.png" alt="Network Traffic Analysis ft. Aaron Hurtado" loading="lazy">
                     </a>
                 </div>
                 
