Removed lazy loading from an image

--- a/index.html
+++ b/index.html
@@ -1103,7 +1103,7 @@
 
                 <div class="image-container">
                     <a href="https://drive.google.com/file/d/1PrqYG2gqoPiIip0i75nTQxt5qtgbkJRy/view" target="_blank">
-                        <img src="./images/sec_group.png" alt="Network Traffic Analysis ft. Aaron Hurtado" loading="lazy">
+                        <img src="./images/sec_group.png" alt="Network Traffic Analysis ft. Aaron Hurtado">
                     </a>
                 </div>
                 
