Added preloading of main font

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 
     <link rel="icon" type="image/png" href="./images/favicon1.png">
     <link rel="stylesheet" href="./style.css">
+    <link rel="preload" href="./fonts/Roboto-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin>
 
     <script type="application/ld+json">
         {
@@ -1103,7 +1104,7 @@
 
                 <div class="image-container">
                     <a href="https://drive.google.com/file/d/1PrqYG2gqoPiIip0i75nTQxt5qtgbkJRy/view" target="_blank">
-                        <img src="./images/sec_group.png" alt="Network Traffic Analysis ft. Aaron Hurtado">
+                        <img src="./images/sec_group.png" alt="Network Traffic Analysis ft. Aaron Hurtado" loading="lazy">
                     </a>
                 </div>
                 
