Converted some images to webp

--- a/index.html
+++ b/index.html
@@ -218,9 +218,9 @@
 
                 <div class="image-container" id="UCSD-pics">
                     <a href="https://www.ucsd.edu/" target="_blank">
-                        <img src="./images/ucsd_seal.png" alt="UCSD Seal" loading="lazy">
+                        <img src="./images/ucsd_seal.webp" alt="UCSD Seal" loading="lazy">
                     </a>
-                    <img src="./images/ucsd_lib.jpg" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
+                    <img src="./images/ucsd_lib.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
                 </div>
 
                 <div class="text-container medium-gap">
@@ -379,7 +379,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/centene_location.avif" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
+                        <img src="./images/centene_location.webp" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
                         <figcaption>San Diego Office</figcaption>
                     </figure>
                     <a href="https://www.centene.com/" target="_blank" rel="noopener noreferrer">
@@ -826,7 +826,7 @@
 
                 <div class="tilt-card-container">
                     <div class="tilt-card image-container">
-                        <img src="./images/ps5.png" alt="Playstation 5" loading="lazy">
+                        <img src="./images/ps5.webp" alt="Playstation 5" loading="lazy">
                     </div>
                 </div>
 
@@ -1104,7 +1104,7 @@
 
                 <div class="image-container">
                     <a href="https://drive.google.com/file/d/1PrqYG2gqoPiIip0i75nTQxt5qtgbkJRy/view" target="_blank">
-                        <img src="./images/sec_group.png" alt="Network Traffic Analysis ft. Aaron Hurtado" loading="lazy">
+                        <img src="./images/sec_group.webp" alt="Network Traffic Analysis ft. Aaron Hurtado" loading="lazy">
                     </a>
                 </div>
                 
