Increased constrast in education section

--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
             <ul class="nav-links left">
                 <li>
                     <a href="#">
-                        <img src="./images/house1.png" alt="Home" class="nav-icon" loading="eager">
+                        <img src="./images/house1.png" alt="Home icon" class="nav-icon" loading="eager">
                         Home
                     </a>
                 </li>
                 <li>
                     <a href="https://github.com/aahurtado/my_website" target="_blank">
-                        <img src="./images/github.png" alt="GitHub" class="nav-icon" loading="eager">
+                        <img src="./images/github.png" alt="GitHub icon" class="nav-icon" loading="eager">
                         GitHub
                     </a>
                 </li>
@@ -69,13 +69,13 @@
             <ul class="nav-links right">
                 <li>
                     <a href="https://drive.google.com/file/d/18VnKl_z2QbvH7aDBLWt7fKyBEytj4Mrq/view?usp=sharing" target="_blank">
-                        <img src="./images/cv.png" alt="Resume" class="nav-icon" loading="eager">
+                        <img src="./images/cv.png" alt="Resume icon" class="nav-icon" loading="eager">
                         Resume
                     </a>
                 </li>
                 <li>
                     <a href="https://www.linkedin.com/in/aaronhurtado/" target="_blank">
-                        <img src="./images/linkedin.png" alt="LinkedIn" class="nav-icon" loading="eager">
+                        <img src="./images/linkedin.png" alt="LinkedIn icon" class="nav-icon" loading="eager">
                         Linkedin
                     </a>
                 </li>
