--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
                         During my time at UCSD, I learned everything from object-oriented programming and software design patterns to data structures and algorithms. I did the majority of my class work in Java, C++, and Python which are my main languages. During my time as a student I also worked as a tutor for the UCSD CSE department for several quarters. I tutored both lower and upper division data structure courses.
                     </p>
                     <p>
-                        A huge part of my time at UCSD was being accepted into the Early Research Scholars Program (ERSP) by the CSE department. I applied to the program the first year it was created and was one of 23 undergraduate students accepted into the program. The main purpose of the program was to expose and get undergraduate students involved in Computer Science Research which is typically done by graduate students and professors. As a result of the ERSP program, I spent three years working alongside graduate students and professors on their research projects in the <a href="https://www.sysnet.ucsd.edu/sysnet/" target="_blank">Systems and Networking Research Group</a> as well as the <a href="https://cryptosec.ucsd.edu/" target="_blank">Security and Cryptography Research Group</a>. The professors I worked with, who were the heads of the aforementioned research groups, were <a href="https://cseweb.ucsd.edu/~savage/" target="_blank">Stefan Savage</a> and <a href="https://cseweb.ucsd.edu/~voelker/" target="_blank">Geoffrey Voelker</a>. You can read about the projects I worked on while in this program in the <a href="#projects">Projects</a> section of this website. You can also learn more about the ERSP program <a href="https://ersp.ucsd.edu/" target="_blank">here</a>.
+                        A huge part of my time at UCSD was being accepted into the Early Research Scholars Program (ERSP) by the CSE department. I applied to the program the first year it was created and was one of 23 undergraduate students accepted into the program. The main purpose of the program was to expose and get undergraduate students involved in Computer Science Research which is typically done by graduate students and professors. As a result of the ERSP program, I spent three years working alongside graduate students and professors on their research projects in the <a href="https://www.sysnet.ucsd.edu/sysnet/" target="_blank">Systems and Networking Research Group</a> as well as the <a href="https://cryptosec.ucsd.edu/" target="_blank">Security and Cryptography Research Group</a>. The professors I worked with, who were the heads of the aforementioned research groups, were <a href="https://cseweb.ucsd.edu/~savage/" target="_blank">Stefan Savage</a> and <a href="https://cseweb.ucsd.edu/~voelker/" target="_blank">Geoffrey Voelker</a>. You can read about the projects I worked on while in this program in the <a href="#projects">Projects</a> section of this website. You can also learn more about the ERSP program by visiting the <a href="https://ersp.ucsd.edu/" target="_blank">ERSP website</a>.
                     </p>
                 </div>
 
@@ -322,7 +322,7 @@
                 </p>
 
                 <p>
-                    You can actually look up the rating of your healthcare plan on their website <a href="https://reportcards.ncqa.org/health-plans" target="_blank" rel="noopener noreferrer">here</a>.
+                    You can actually look up the rating of your healthcare plan on the <a href="https://reportcards.ncqa.org/health-plans" target="_blank" rel="noopener noreferrer">NCQA Health Plan Report Card website</a>.
                 </p>
 
                 <div class="image-container">
@@ -954,7 +954,7 @@
 
                 <div class="text-container large-gap">
                     <p>
-                        By the end of the summer, I had successfully completed the software program and had helped contribute to David's research project. He even thanked me for my work in his published research paper. The title of the research paper is "Search + Seizure: The Effectiveness of Interventions on SEO Campaigns" and you can read the full paper <a href="https://www.sysnet.ucsd.edu/projects/cloaking/" target="_blank" rel="noopener noreferrer">here</a>.
+                        By the end of the summer, I had successfully completed the software program and had helped contribute to David's research project. He even thanked me for my work in his published research paper. The title of the research paper is "Search + Seizure: The Effectiveness of Interventions on SEO Campaigns" and you can read the full paper here on the <a href="https://www.sysnet.ucsd.edu/projects/cloaking/" target="_blank" rel="noopener noreferrer">UCSD Systems and Networking Research Group website</a>.
                     </p>
                 </div>
 
