Added width and height to images

--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 
                 <div class="image-container">
-                    <img src="./images/grad_pic.jpg" alt="Picture of Aaron Hurtado" onclick="openFullscreen(this)" class="clickable-image">
+                    <img src="./images/grad_pic.jpg" alt="Picture of Aaron Hurtado" onclick="openFullscreen(this)" class="clickable-image" width="1365" height="1483">
                 </div>
             </div>
         </section>
@@ -226,9 +226,9 @@
 
                 <div class="image-container" id="UCSD-pics">
                     <a href="https://www.ucsd.edu/" target="_blank">
-                        <img src="./images/ucsd_seal.webp" alt="UCSD Seal" loading="lazy">
+                        <img src="./images/ucsd_seal.webp" alt="UCSD Seal" loading="lazy" width="1920" height="1920">
                     </a>
-                    <img src="./images/ucsd_lib.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
+                    <img src="./images/ucsd_lib.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539">
                 </div>
 
                 <div class="text-container medium-gap">
@@ -260,7 +260,7 @@
 
                 <div class="image-container">
                     <a href="https://cse.ucsd.edu/" target="_blank">
-                        <img src="./images/ucsd_cse.jpg" alt="UCSD CSE Department" loading="lazy">
+                        <img src="./images/ucsd_cse.jpg" alt="UCSD CSE Department" loading="lazy" width="1349" height="497">
                     </a>
                 </div>
             </div>
@@ -335,7 +335,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/hedis_measures.PNG" alt="HEDIS Measure Descriptions" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
+                        <img src="./images/hedis_measures.PNG" alt="HEDIS Measure Descriptions" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1726" height="1332">
                         <figcaption>Brief HEDIS measure descriptions</figcaption>
                     </figure>
                 </div>
@@ -387,11 +387,11 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/centene_location.webp" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
+                        <img src="./images/centene_location.webp" alt="Centene Location" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1920" height="1280">
                         <figcaption>San Diego Office</figcaption>
                     </figure>
                     <a href="https://www.centene.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/centene_logo.png" alt="Centene Logo" id="centene_logo" loading="lazy">
+                        <img src="./images/centene_logo.png" alt="Centene Logo" id="centene_logo" loading="lazy" width="2560" height="634">
                     </a>
                 </div>
 
@@ -440,22 +440,22 @@
 
                 <div class="image-container">
                     <a href="https://www.epsilonsystems.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/epsilon_logo.jfif" alt="Epsilon Systems Solutions Logo" loading="lazy">
+                        <img src="./images/epsilon_logo.jfif" alt="Epsilon Systems Solutions Logo" loading="lazy" width="800" height="421">
                     </a>
                     <a href="https://www.rtx.com/" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/raytheon.jfif" alt="Raytheon Logo" loading="lazy">
+                        <img src="./images/raytheon.jfif" alt="Raytheon Logo" loading="lazy" width="1920" height="1280">
                     </a>
                 </div>
 
                 <div class="image-container">
                     <a href="https://en.wikipedia.org/wiki/Ship_Self-Defense_System" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/navy_ship.jpg" alt="Navy Ship" loading="lazy">
+                        <img src="./images/navy_ship.jpg" alt="Navy Ship" loading="lazy" width="650" height="432">
                     </a>
                 </div>
 
                 <div class="video-container">
                     <!-- <iframe src="https://www.youtube.com/embed/XrNSXqaZtC0?autoplay=1&mute=1&controls=1&loop=1&playlist=XrNSXqaZtC0"></iframe> -->
-                    <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/XrNSXqaZtC0?si=HSENmCpgKOFFwTUh&autoplay=1&mute=1&controls=1&loop=1&playlist=XrNSXqaZtC0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" loading="lazy" allowfullscreen></iframe>
+                    <iframe width="560" height="800" src="https://www.youtube-nocookie.com/embed/XrNSXqaZtC0?si=HSENmCpgKOFFwTUh&autoplay=1&mute=1&controls=1&loop=1&playlist=XrNSXqaZtC0" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" loading="lazy" allowfullscreen></iframe>
                 </div>
 
             </div>
@@ -496,7 +496,7 @@
                 </p>
 
                 <div class="image-container">
-                    <img src="./images/stock_chart.webp" alt="Stock Chart" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
+                    <img src="./images/stock_chart.webp" alt="Stock Chart" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1024" height="576">
                 </div>
 
                 <h5>What is <a href="https://www.investopedia.com/terms/t/technicalanalysis.asp" target="_blank" rel="noopener noreferrer">Technical Analysis</a>?</h5>
@@ -516,7 +516,7 @@
 
                 <div class="image-container">
                     <a href="https://www.investopedia.com/terms/m/macd.asp" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/macd.webp" alt="MACD" loading="lazy">
+                        <img src="./images/macd.webp" alt="MACD" loading="lazy" width="1500" height="1000">
                     </a>
                 </div>
                 
@@ -527,7 +527,7 @@
                 </p>
 
                 <div class="image-container">
-                    <img src="./images/crypto.jpg" alt="Cryptocurrency" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
+                    <img src="./images/crypto.jpg" alt="Cryptocurrency" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1200" height="675">
                 </div>
 
                 <h5>Freqtrade</h5>
@@ -537,7 +537,7 @@
 
                 <div class="image-container">
                     <a href="https://github.com/freqtrade/freqtrade" target="_blank">
-                        <img src="./images/freqtrade.svg" alt="Freqtrade Logo" id="freqtrade_logo" loading="lazy">
+                        <img src="./images/freqtrade.svg" alt="Freqtrade Logo" id="freqtrade_logo" loading="lazy" height="600">
                     </a>
                 </div> 
 
@@ -547,7 +547,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/code_freqtrade_strategy.png" alt="Example Freqtrade Strategy" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
+                        <img src="./images/code_freqtrade_strategy.png" alt="Example Freqtrade Strategy" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="2011" height="1131">
                         <figcaption>A Minimal Freqtrade Strategy</figcaption>
                     </figure>
                 </div> 
@@ -619,7 +619,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/freqtrade_results.PNG" alt="Freqtrade Results" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
+                        <img src="./images/freqtrade_results.PNG" alt="Freqtrade Results" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1157" height="843">
                         <figcaption>My Freqtrade Results</figcaption>
                     </figure>
                 </div>
@@ -679,7 +679,7 @@
 
 
                 <div class="image-container">
-                    <img src="./images/bitcoin.webp" alt="Bitcoin Logo" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
+                    <img src="./images/bitcoin.webp" alt="Bitcoin Logo" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1200" height="900">
                 </div>
 
 
@@ -746,7 +746,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/ps5_scalpers.webp" alt="PS5 listings on eBay" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
+                        <img src="./images/ps5_scalpers.webp" alt="PS5 listings on eBay" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="1120" height="630">
                         <figcaption>PS5 listings on eBay by scalpers</figcaption>
                     </figure>
                 </div>
@@ -767,7 +767,7 @@
                 <div class="image-container">
                     <figure>
                         <a href="https://github.com/Strip3s/PhoenixBot" target="_blank">
-                            <img src="./images/phoenix_bot.png" alt="Phoenix Bot" loading="lazy">
+                            <img src="./images/phoenix_bot.png" alt="Phoenix Bot" loading="lazy" width="1112" height="630">
                         </a>
                         <figcaption>Phoenix Bot UI</figcaption>
                     </figure>
@@ -784,7 +784,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <img src="./images/ps5_product_page.png" alt="PS5 Product Page" onclick="openFullscreen(this)" class="clickable-image" loading="lazy">
+                        <img src="./images/ps5_product_page.png" alt="PS5 Product Page" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="2560" height="1440">
                         <figcaption>PS5 Product Page</figcaption>
                     </figure>
                 </div>
@@ -834,7 +834,7 @@
 
                 <div class="tilt-card-container">
                     <div class="tilt-card image-container">
-                        <img src="./images/ps5.webp" alt="Playstation 5" loading="lazy">
+                        <img src="./images/ps5.webp" alt="Playstation 5" loading="lazy" width="3840" height="2160">
                     </div>
                 </div>
 
@@ -897,7 +897,7 @@
                 <div class="tilt-card-container">
                     <div class="tilt-card image-container">
                         <a href="https://github.com/aahurtado/my_website" target="_blank">
-                            <img src="./images/my_website_github.png" alt="Picture of this website" loading="lazy">
+                            <img src="./images/my_website_github.png" alt="Picture of this website" loading="lazy" width="2545" height="1690">
                         </a>
                     </div>
                 </div>
@@ -969,7 +969,7 @@
 
                 <div class="image-container">
                     <a href="https://www.sysnet.ucsd.edu/projects/cloaking/searchseizure-IMC14v2.pdf" target="_blank">
-                        <img src="./images/research_paper_1.PNG" alt="Search + Seizure: The Effectiveness of Interventions on SEO Campaigns" class="text-width" loading="lazy">
+                        <img src="./images/research_paper_1.PNG" alt="Search + Seizure: The Effectiveness of Interventions on SEO Campaigns" class="text-width" loading="lazy" width="1700" height="2200">
                     </a>
                 </div> 
 
@@ -1112,7 +1112,7 @@
 
                 <div class="image-container">
                     <a href="https://drive.google.com/file/d/1PrqYG2gqoPiIip0i75nTQxt5qtgbkJRy/view" target="_blank">
-                        <img src="./images/sec_group.webp" alt="Network Traffic Analysis ft. Aaron Hurtado" loading="lazy">
+                        <img src="./images/sec_group.webp" alt="Network Traffic Analysis ft. Aaron Hurtado" loading="lazy" width="9600" height="7200">
                     </a>
                 </div>
                 
