Added "noopener noreferrer" to some links

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="https://github.com/aahurtado/my_website" target="_blank">
+                    <a href="https://github.com/aahurtado/my_website" target="_blank" rel="noopener">
                         <img src="./images/github.png" alt="GitHub icon" class="nav-icon" loading="eager">
                         GitHub
                     </a>
@@ -76,13 +76,13 @@
 
             <ul class="nav-links right">
                 <li>
-                    <a href="https://drive.google.com/file/d/18VnKl_z2QbvH7aDBLWt7fKyBEytj4Mrq/view?usp=sharing" target="_blank">
+                    <a href="https://drive.google.com/file/d/18VnKl_z2QbvH7aDBLWt7fKyBEytj4Mrq/view?usp=sharing" target="_blank" rel="noopener">
                         <img src="./images/cv.png" alt="Resume icon" class="nav-icon" loading="eager">
                         Resume
                     </a>
                 </li>
                 <li>
-                    <a href="https://www.linkedin.com/in/aaronhurtado/" target="_blank">
+                    <a href="https://www.linkedin.com/in/aaronhurtado/" target="_blank" rel="noopener">
                         <img src="./images/linkedin.png" alt="LinkedIn icon" class="nav-icon" loading="eager">
                         Linkedin
                     </a>
@@ -225,7 +225,7 @@
                 <h2 id="UCSD-header">University of California, San Diego</h2>
 
                 <div class="image-container" id="UCSD-pics">
-                    <a href="https://www.ucsd.edu/" target="_blank">
+                    <a href="https://www.ucsd.edu/" target="_blank" rel="noopener noreferrer">
                         <img src="./images/ucsd_seal.webp" alt="UCSD Seal" loading="lazy" width="1920" height="1920">
                     </a>
                     <img src="./images/ucsd_lib.webp" alt="UCSD Library" onclick="openFullscreen(this)" class="clickable-image" loading="lazy" width="3803" height="2539">
@@ -250,7 +250,7 @@
                         During my time at UCSD, I learned everything from object-oriented programming and software design patterns to data structures and algorithms. I did the majority of my class work in Java, C++, and Python which are my main languages. During my time as a student I also worked as a tutor for the UCSD CSE department for several quarters. I tutored both lower and upper division data structure courses.
                     </p>
                     <p>
-                        A huge part of my time at UCSD was being accepted into the Early Research Scholars Program (ERSP) by the CSE department. I applied to the program the first year it was created and was one of 23 undergraduate students accepted into the program. The main purpose of the program was to expose and get undergraduate students involved in Computer Science Research which is typically done by graduate students and professors. As a result of the ERSP program, I spent three years working alongside graduate students and professors on their research projects in the <a href="https://www.sysnet.ucsd.edu/sysnet/" target="_blank">Systems and Networking Research Group</a> as well as the <a href="https://cryptosec.ucsd.edu/" target="_blank">Security and Cryptography Research Group</a>. The professors I worked with, who were the heads of the aforementioned research groups, were <a href="https://cseweb.ucsd.edu/~savage/" target="_blank">Stefan Savage</a> and <a href="https://cseweb.ucsd.edu/~voelker/" target="_blank">Geoffrey Voelker</a>. You can read about the projects I worked on while in this program in the <a href="#projects">Projects</a> section of this website. You can also learn more about the ERSP program by visiting the <a href="https://ersp.ucsd.edu/" target="_blank">ERSP website</a>.
+                        A huge part of my time at UCSD was being accepted into the Early Research Scholars Program (ERSP) by the CSE department. I applied to the program the first year it was created and was one of 23 undergraduate students accepted into the program. The main purpose of the program was to expose and get undergraduate students involved in Computer Science Research which is typically done by graduate students and professors. As a result of the ERSP program, I spent three years working alongside graduate students and professors on their research projects in the <a href="https://www.sysnet.ucsd.edu/sysnet/" target="_blank" rel="noopener noreferrer">Systems and Networking Research Group</a> as well as the <a href="https://cryptosec.ucsd.edu/" target="_blank" rel="noopener noreferrer">Security and Cryptography Research Group</a>. The professors I worked with, who were the heads of the aforementioned research groups, were <a href="https://cseweb.ucsd.edu/~savage/" target="_blank" rel="noopener noreferrer">Stefan Savage</a> and <a href="https://cseweb.ucsd.edu/~voelker/" target="_blank" rel="noopener noreferrer">Geoffrey Voelker</a>. You can read about the projects I worked on while in this program in the <a href="#projects">Projects</a> section of this website. You can also learn more about the ERSP program by visiting the <a href="https://ersp.ucsd.edu/" target="_blank" rel="noopener noreferrer">ERSP website</a>.
                     </p>
                 </div>
 
@@ -259,7 +259,7 @@
 
 
                 <div class="image-container">
-                    <a href="https://cse.ucsd.edu/" target="_blank">
+                    <a href="https://cse.ucsd.edu/" target="_blank" rel="noopener noreferrer">
                         <img src="./images/ucsd_cse.jpg" alt="UCSD CSE Department" loading="lazy" width="1349" height="497">
                     </a>
                 </div>
@@ -532,11 +532,11 @@
 
                 <h5>Freqtrade</h5>
                 <p>
-                    When I started researching trading bots, I quickly discovered <a href="https://github.com/freqtrade/freqtrade" target="_blank">Freqtrade</a>. Freqtrade is a free and open-source Python based cryptocurrency trading bot framework. Freqtrade works on the main cryptocurrency exchanges like Binance, Kraken, and Coinbase. It allows you to download historical price and volume data for any cryptocurrency pair supported by the exchange. With this data, you can backtest your trading strategy and optimize your trading parameters. Backtesting is where Freqtrade runs a simulation of your trading strategy on historical data and presents you with the results of your strategy. Then once you are satisfied with your strategy, you can use Freqtrade to trade the cryptocurrency live in real time.
+                    When I started researching trading bots, I quickly discovered <a href="https://github.com/freqtrade/freqtrade" target="_blank" rel="noopener noreferrer">Freqtrade</a>. Freqtrade is a free and open-source Python based cryptocurrency trading bot framework. Freqtrade works on the main cryptocurrency exchanges like Binance, Kraken, and Coinbase. It allows you to download historical price and volume data for any cryptocurrency pair supported by the exchange. With this data, you can backtest your trading strategy and optimize your trading parameters. Backtesting is where Freqtrade runs a simulation of your trading strategy on historical data and presents you with the results of your strategy. Then once you are satisfied with your strategy, you can use Freqtrade to trade the cryptocurrency live in real time.
                 </p>
 
                 <div class="image-container">
-                    <a href="https://github.com/freqtrade/freqtrade" target="_blank">
+                    <a href="https://github.com/freqtrade/freqtrade" target="_blank" rel="noopener noreferrer">
                         <img src="./images/freqtrade.svg" alt="Freqtrade Logo" id="freqtrade_logo" loading="lazy" height="600">
                     </a>
                 </div> 
@@ -766,7 +766,7 @@
 
                 <div class="image-container">
                     <figure>
-                        <a href="https://github.com/Strip3s/PhoenixBot" target="_blank">
+                        <a href="https://github.com/Strip3s/PhoenixBot" target="_blank" rel="noopener noreferrer">
                             <img src="./images/phoenix_bot.png" alt="Phoenix Bot" loading="lazy" width="1112" height="630">
                         </a>
                         <figcaption>Phoenix Bot UI</figcaption>
@@ -896,7 +896,7 @@
 
                 <div class="tilt-card-container">
                     <div class="tilt-card image-container">
-                        <a href="https://github.com/aahurtado/my_website" target="_blank">
+                        <a href="https://github.com/aahurtado/my_website" target="_blank" rel="noopener">
                             <img src="./images/my_website_github.png" alt="Picture of this website" loading="lazy" width="2545" height="1690">
                         </a>
                     </div>
@@ -968,7 +968,7 @@
 
 
                 <div class="image-container">
-                    <a href="https://www.sysnet.ucsd.edu/projects/cloaking/searchseizure-IMC14v2.pdf" target="_blank">
+                    <a href="https://www.sysnet.ucsd.edu/projects/cloaking/searchseizure-IMC14v2.pdf" target="_blank" rel="noopener noreferrer">
                         <img src="./images/research_paper_1.PNG" alt="Search + Seizure: The Effectiveness of Interventions on SEO Campaigns" class="text-width" loading="lazy" width="1700" height="2200">
                     </a>
                 </div> 
@@ -1111,7 +1111,7 @@
                 </div>
 
                 <div class="image-container">
-                    <a href="https://drive.google.com/file/d/1PrqYG2gqoPiIip0i75nTQxt5qtgbkJRy/view" target="_blank">
+                    <a href="https://drive.google.com/file/d/1PrqYG2gqoPiIip0i75nTQxt5qtgbkJRy/view" target="_blank" rel="noopener noreferrer">
                         <img src="./images/sec_group.webp" alt="Network Traffic Analysis ft. Aaron Hurtado" loading="lazy" width="9600" height="7200">
                     </a>
                 </div>
@@ -1136,9 +1136,9 @@
                 
                 <div class="footer-content">
                     <h4>Links</h4>
-                    <p><a href="https://github.com/aahurtado/my_website" target="_blank">GitHub</a></p>
-                    <p><a href="https://www.linkedin.com/in/aaronhurtado/" target="_blank">LinkedIn</a></p>
-                    <p><a href="https://drive.google.com/file/d/18VnKl_z2QbvH7aDBLWt7fKyBEytj4Mrq/view?usp=sharing" target="_blank">Resume</a></p>
+                    <p><a href="https://github.com/aahurtado/my_website" target="_blank" rel="noopener">GitHub</a></p>
+                    <p><a href="https://www.linkedin.com/in/aaronhurtado/" target="_blank" rel="noopener">LinkedIn</a></p>
+                    <p><a href="https://drive.google.com/file/d/18VnKl_z2QbvH7aDBLWt7fKyBEytj4Mrq/view?usp=sharing" target="_blank" rel="noopener">Resume</a></p>
                 </div>
 
                 <div class="footer-content">
