Added width to img

--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
 
                 <div class="image-container">
                     <a href="https://github.com/freqtrade/freqtrade" target="_blank" rel="noopener noreferrer">
-                        <img src="./images/freqtrade.svg" alt="Freqtrade Logo" id="freqtrade_logo" loading="lazy" height="600">
+                        <img src="./images/freqtrade.svg" alt="Freqtrade Logo" id="freqtrade_logo" loading="lazy" width="1400" height="600">
                     </a>
                 </div> 
 
