Improved nested lists v2

--- a/index.html
+++ b/index.html
@@ -136,20 +136,22 @@
 
                         <li><a href="#education">Education</a></li>
 
-                        <li><a href="#experience">Experience</a></li>
-                        <ul>
-                            <li><a href="#centene">Centene</a></li>
-                            <li><a href="#epsilon_systems">Epsilon Systems Solutions, Inc.</a></li>
-                        </ul>
+                        <li><a href="#experience">Experience</a>
+                            <ul>
+                                <li><a href="#centene">Centene</a></li>
+                                <li><a href="#epsilon_systems">Epsilon Systems Solutions, Inc.</a></li>
+                            </ul>
+                        </li>
 
-                        <li><a href="#projects"> Projects </a></li>
-                        <ul>
-                            <li><a href="#crypto_trading_bot">Cryptocurrency Trading Bot</a></li>
-                            <li><a href="#ps5_purchasing_bot">PS5 Purchasing Bot</a></li>
-                            <li><a href="#this_website">This Website</a></li>
-                            <li><a href="#research_project_search_and_seizure">Research Project: Search + Seizure</a></li>
-                            <li><a href="#research_project_network_traffic_analysis">Research Project: Network Traffic Analysis</a></li>
-                        </ul>
+                        <li><a href="#projects">Projects</a>
+                            <ul>
+                                <li><a href="#crypto_trading_bot">Cryptocurrency Trading Bot</a></li>
+                                <li><a href="#ps5_purchasing_bot">PS5 Purchasing Bot</a></li>
+                                <li><a href="#this_website">This Website</a></li>
+                                <li><a href="#research_project_search_and_seizure">Research Project: Search + Seizure</a></li>
+                                <li><a href="#research_project_network_traffic_analysis">Research Project: Network Traffic Analysis</a></li>
+                            </ul>
+                        </li>
 
                         <li><a href="#footer">Contact</a></li>
                     </ol>
