--- a/index.html
+++ b/index.html
@@ -213,7 +213,10 @@
 
 
                 <div class="image-container">
-                    <img src="./images/grad_pic.jpg" alt="Picture of Aaron Hurtado" onclick="openFullscreen(this)" class="clickable-image" width="1365" height="1483">
+                    <img data-src="./images/grad_pic.jpg" alt="Picture of Aaron Hurtado" onclick="openFullscreen(this)" class="clickable-image first-pic" width="1365" height="1483">
+                    <noscript>
+                        <img src="./images/grad_pic.jpg" alt="Picture of Aaron Hurtado" class="clickable-image first-pic" width="1365" height="1483">
+                    </noscript>
                 </div>
             </div>
         </section>
