--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 
     <link rel="icon" type="image/png" href="./images/favicon1.png">
     <link rel="stylesheet" href="./style.css">
-    <link rel="preload" href="./fonts/Roboto-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin>
+    <!-- <link rel="preload" href="./fonts/Roboto-VariableFont_wdth,wght.ttf" as="font" type="font/ttf" crossorigin> -->
+    <link rel="preload" href="./fonts/Roboto-VariableFont_wdth,wght.woff2" as="font" type="font/woff2" crossorigin>
 
     <script type="application/ld+json">
         {
